Week 2 Advanced HTML Assignment
With Audio and Video

--- a/Index1.html
+++ b/Index1.html
@@ -24,7 +24,7 @@
             </audio>
             <h4>Video</h4>
             <video controls width="640" height="360">
-                <source src="E:\Academy PLP\Web Development V2\Web - Week 2- Session 3.mp4" type="video/mp4">
+                <source src="E:\Academy PLP\Web Development V2\Thank you.mp4" type="video/mp4">
                 Your browser does not support the video element.
             </video>
             
