Week Two Advanced HTML Assignment
With Audio and Video

--- a/Index1.html
+++ b/Index1.html
@@ -19,12 +19,12 @@
             <h3>Audio & Video Entertainment</h3>
             <h4>Audio</h4>
             <audio controls>
-                <source src="E:\Academy PLP\Web Development V2\The Seeker ~ Dolly.mp3" type="audio/mpeg">
+                <source src="The Seeker ~ Dolly.mp3" type="audio/mpeg">
                 Your browser does not support the audio element.
             </audio>
             <h4>Video</h4>
             <video controls width="640" height="360">
-                <source src="E:\Academy PLP\Web Development V2\Thank you.mp4" type="video/mp4">
+                <source src="Thank you.mp4" type="video/mp4">
                 Your browser does not support the video element.
             </video>
             
